# PUR-Silnik-fiz-chem

./: .gitignore  DEV_DASHBOARD_TODO3.md  README_SETUP.md  README_VERS.md  coverage.xml  joblib.py  pr_body.md  pr_body_en.md  py_lib.md  py_lib_debug.txt  pyproject.toml  readme.md  setup_workspace.sh  standards.md  todo1.md  todo2.md  todo3.md  todo4.md
.devcontainer/: devcontainer.json
PUR-Silnik fiz-chem+model fiz-chem/: agent_instructions.md  copilot_update_project_playbook.md  readme.md
admin/: TODO1_PKT10_changelog.md  TODO1_PKT12_changelog.md  TODO1_PKT13_changelog.md  TODO1_PKT2_changelog.md  TODO1_PKT3_changelog.md  TODO1_PKT5_changelog.md  TODO1_PKT8_changelog.md  TODO2_PKT10_changelog.md  TODO2_PKT1_changelog.md  TODO2_PKT3_changelog.md  TODO2_PKT4_changelog.md  TODO2_PKT5_changelog.md  TODO2_PKT7_changelog.md  TODO2_PKT8_changelog.md  TODO2_PKT9_changelog.md
configs/: README.md
docs/: ANALYSIS_REPORT.md  API_REST_SPEC.md  API_SERVICE_EXAMPLES.md  ML_EXTRAS.md  ML_LOGGING.md  MODEL_1D_SPEC.md  MODEL_OVERVIEW.md  ODE_BACKEND_CONTRACT.md  PERF_BACKENDS.md  ROADMAP_TODO3.md  STRUCTURE.md  USE_CASES.md  service_example.md  tmp_model_overview.md
ruamel/: __init__.py
scripts/: bench_backends.py  build_dataset.py  calibrate_kinetics.py  calibration_report.py  debug_import_logs_run.py  inspect_train_baseline.py  ml_status_tester.py  plot_kinetics.py  run_train_main_debug.py  service_example.py  smoke_e2e.py
sklearn/: __init__.py  ensemble.py  metrics.py
tests/: conftest.py  test_calibration_loader.py  test_cli.py  test_cli_drift.py  test_drift.py  (+19 more)
(+104 files in other folders)
