[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pur-mold-twin"
version = "0.2.0"
description = "0D PUR foam simulator with CLI and optimizer"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "PUR-MOLD-TWIN Team" }]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pydantic>=2.6",
    "pint>=0.22",
    "ruamel.yaml>=0.18",
    "typer>=0.9",
    "pandas>=2.1",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
ml = ["scikit-learn>=1.3"]
sundials = ["scikits.odes>=2.7"]
jax = ["jax>=0.4", "diffrax>=0.5"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "mypy>=1.8",
    "ruff>=0.1",
    "black>=23.12",
]

[project.scripts]
pur-mold-twin = "pur_mold_twin.cli.main:main"

[project.urls]
homepage = "https://github.com/pur-mold-twin/pur-mold-twin"
repository = "https://github.com/pur-mold-twin/pur-mold-twin"
documentation = "https://github.com/pur-mold-twin/pur-mold-twin/tree/main/docs"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src/pur_mold_twin/core"]

[tool.coverage.report]
fail_under = 80
show_missing = true
